--- a/assets/sass/components/_cant-login.scss
+++ b/assets/sass/components/_cant-login.scss
@@ -131,4 +131,9 @@ form.reset-password-form {
     padding: 2.5rem 0 0.5rem;
     background: #2a2829;
     color: $light-gray;
+
+    .contact-info-blurb {
+        padding-top: 2rem;
+        border-top: 0.1rem solid #515151;
+    }
 }
